--- a/Qt source code/devices.ui
+++ b/Qt source code/devices.ui
@@ -23,9 +23,27 @@
     <rect>
      <x>80</x>
      <y>80</y>
-     <width>256</width>
+     <width>270</width>
      <height>291</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>50</y>
+     <width>111</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>On-Line Devices</string>
    </property>
   </widget>
  </widget>
