--- a/Qt source code/options.ui
+++ b/Qt source code/options.ui
@@ -21,7 +21,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>100</x>
      <y>90</y>
      <width>81</width>
      <height>16</height>
@@ -34,8 +34,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>220</y>
+     <x>100</x>
+     <y>210</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -47,8 +47,8 @@
   <widget class="QLineEdit" name="ID">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>220</y>
+     <x>220</x>
+     <y>210</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -57,7 +57,7 @@
   <widget class="QLineEdit" name="IP">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>220</x>
      <y>90</y>
      <width>113</width>
      <height>20</height>
@@ -67,8 +67,8 @@
   <widget class="QPushButton" name="option_confirm">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>290</y>
+     <x>320</x>
+     <y>300</y>
      <width>75</width>
      <height>30</height>
     </rect>
@@ -84,7 +84,7 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>100</x>
      <y>150</y>
      <width>61</width>
      <height>16</height>
@@ -97,7 +97,7 @@
   <widget class="QLineEdit" name="Port">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>220</x>
      <y>150</y>
      <width>113</width>
      <height>20</height>
@@ -107,14 +107,24 @@
   <widget class="QPushButton" name="cancle">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>290</y>
-     <width>81</width>
-     <height>31</height>
+     <x>220</x>
+     <y>300</y>
+     <width>75</width>
+     <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>取消</string>
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset resource="resource.qrc">
+     <normaloff>:/icon/images/button_cancle.svg</normaloff>:/icon/images/button_cancle.svg</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>18</width>
+     <height>18</height>
+    </size>
    </property>
   </widget>
  </widget>
