--- a/Qt source code/communicate.ui
+++ b/Qt source code/communicate.ui
@@ -67,7 +67,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/icon/images/加.svg</normaloff>:/icon/images/加.svg</iconset>
    </property>
    <property name="iconSize">
@@ -90,7 +90,22 @@
     <number>0</number>
    </property>
   </widget>
+  <widget class="QPushButton" name="restart">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>260</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Restart</string>
+   </property>
+  </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
