--- a/Qt source code/options.ui
+++ b/Qt source code/options.ui
@@ -22,7 +22,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>90</y>
+     <y>50</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -35,7 +35,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>210</y>
+     <y>170</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -47,8 +47,8 @@
   <widget class="QLineEdit" name="ID">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>210</y>
+     <x>210</x>
+     <y>170</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -57,8 +57,8 @@
   <widget class="QLineEdit" name="IP">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>90</y>
+     <x>210</x>
+     <y>50</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -85,7 +85,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>150</y>
+     <y>110</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -97,8 +97,8 @@
   <widget class="QLineEdit" name="Port">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>150</y>
+     <x>210</x>
+     <y>110</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -131,7 +131,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>270</y>
+     <y>230</y>
      <width>101</width>
      <height>16</height>
     </rect>
@@ -143,11 +143,37 @@
   <widget class="QLineEdit" name="delay">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>270</y>
+     <x>210</x>
+     <y>230</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>290</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>保存文件到</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="choose_dir">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>290</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
