--- a/New BackEnd/BackEnd/mainwindow.ui
+++ b/New BackEnd/BackEnd/mainwindow.ui
@@ -17,14 +17,40 @@
    <widget class="QPushButton" name="Btn">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>60</x>
       <y>130</y>
-      <width>101</width>
+      <width>181</width>
       <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>show connect</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Btn2">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>140</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>message</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Btn3">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>240</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>file</string>
     </property>
    </widget>
   </widget>
